# tpn-automation

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  paper.bib  paper.md  pyproject.toml  test_filter.js  test_ring.js  tpn-dashboard.html  usage.md
tests/: test_import.py
tpn_automation/: .gitignore  main.py  pyproject.toml
tpn_automation/src/tpn_automation/: main.py
tpn_automation/tests/: test_import.py
