[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tpn_automation"
version = "1.0.0"
description = "Automated License Intelligence and Compliance Risk Analysis from TPN documents"
authors = [
  { name = "Devashri Datta" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

dependencies = [
  "pypdf",
  "pandas",
  "numpy",
  "spacy"
]

[tool.setuptools.packages.find]
where = ["."]
